Mon Apr 11 08:46:56 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/nmake.mpd:

          Corrected a bug dealing with source files containing ..\ where the
          explicit rules did not have the correct path.

Fri Apr  8 12:14:02 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WinProjectBase.pm:

          Since a directory with ..\ in it will cause the object files
          to be created outside of the intermediate directory,
          no Windows based project can have ..\ in the intermediate
          directory name.

        * templates/automake.mpd:
        * templates/automakedll.mpt:

          Added support for the 'postbuild' setting.

Wed Apr  6 06:43:51 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/TemplateParser.pm:

          Added new template functions, 'ends_with' and 'contains', which
          work similarly to 'starts_with'.  The function names are self
          explanatory.

Mon Apr  4 13:02:59 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/xerces.mpb:

          Change libs to lit_libs to ensure that there are no library
          decorator issues (especially with static builds).

Mon Apr  4 12:27:14 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/TemplateParser.pm:

          Added a new template function, 'starts_with', that takes two
          parameters.  The first parameter is a template variable and the
          second is a literal string.  If the value of the template variable
          starts with the literal string, then starts_with evaluates to
          true.

Fri Apr  1 12:39:12 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/em3vcp.mpd:
        * templates/vc6dsp.mpd:

          Specify the /implib option to be consistent with the nmake and vc7
          templates.  This allows the user to control where it goes with the
          'libout;' setting.

Fri Apr  1 07:30:50 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README: