@@ -1,3 +1,15 @@
+Wed Apr 13 07:18:59 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/TemplateParser.pm:
+
+          Rewrote the tp_dirname() method to use the builtin rindex function
+          instead of character iteration.
+
+        * templates/nmake.mpd:
+
+          Simplified this template to use dirname() instead of multiple
+          contains().
+
 Mon Apr 11 08:46:56 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * templates/nmake.mpd:
